Fixed an undiscovered security issue

--- a/index.html
+++ b/index.html
@@ -642,6 +642,7 @@
               <div class="flex justify-center">
                 <a
                   href="https://www.linkedin.com/in/oke-oghene-amuwha-1b1489203/"
+                  rel="noreferrer"
                   target="_blank"
                 >
                   <div class="m-2 transition hover:text-blue-400 md:m-5">
@@ -654,7 +655,10 @@
                     <p class="text-md pt-2">LinkedIn</p>
                   </div>
                 </a>
-                <a href="mailto: amuwhao46@gmail.com">
+                <a 
+                  href="mailto: amuwhao46@gmail.com"
+                  rel="noreferrer"
+                >
                   <div class="m-2 transition hover:text-blue-400 md:m-5">
                     <img
                       class="mx-auto rounded-full border border-black"
@@ -665,7 +669,11 @@
                     <p class="text-md pt-2">Mail</p>
                   </div>
                 </a>
-                <a href="https://github.com/amuwhao46" target="_blank">
+                <a 
+                    href="https://github.com/amuwhao46" 
+                    rel="noreferrer"
+                    target="_blank"
+                  >
                   <div class="m-2 transition hover:text-blue-400 md:m-5">
                     <img
                       class="mx-auto rounded-full border border-black"
